[gd_scene load_steps=13 format=2]

[ext_resource path="res://battle_backgound.png" type="Texture" id=1]
[ext_resource path="res://Fonts/small_pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/battle/battle.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="GDScript" id=2]
script/source = "extends Label

var ControllerPath = \"/root/Battle\"
var SelfMamonPath = \"/root/Battle/SelfMamon\"

func _ready():
	get_node(ControllerPath).connect(\"ready_finished\", self, \"_post_ready\")

func _post_ready():
	self.text = get_node(SelfMamonPath).nome
"

[sub_resource type="DynamicFont" id=3]
size = 8
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="GDScript" id=4]
script/source = "extends Label

var ControllerPath = \"/root/Battle\"
var SelfMamonPath = \"/root/Battle/SelfMamon\"

func _ready():
	get_node(ControllerPath).connect(\"ready_finished\", self, \"_post_ready\")

func _post_ready():

	self.text = str(get_node(SelfMamonPath).current_hp) + \"/\" + \\
				str(get_node(SelfMamonPath).total_hp)
	
	get_node(ControllerPath).connect(\"self_hp_changed\", self, \"_update_label\")
	
func _update_label():
	self.text = str(get_node(SelfMamonPath).current_hp) + \"/\" + \\
				str(get_node(SelfMamonPath).total_hp)
"

[sub_resource type="DynamicFont" id=5]
size = 8
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="GDScript" id=6]
script/source = "extends Label

var ControllerPath = \"/root/Battle\"
var EnemyMamonPath = \"/root/Battle/EnemyMamon\"

func _ready():
	get_node(ControllerPath).connect(\"ready_finished\", self, \"_post_ready\")

func _post_ready():
	self.text = get_node(EnemyMamonPath).nome
"

[sub_resource type="GDScript" id=7]
script/source = "extends Label

var ControllerPath = \"/root/Battle\"
var EnemyMamonPath = \"/root/Battle/EnemyMamon\"

func _ready():
	get_node(ControllerPath).connect(\"ready_finished\", self, \"_post_ready\")

func _post_ready():

	self.text = str(get_node(EnemyMamonPath).get_current_hp()) + \"/\" + \\
				str(get_node(ControllerPath).get_node(\"EnemyMamon\").total_hp)
	
	get_node(ControllerPath).connect(\"enemy_hp_changed\", self, \"_update_label\")
	
func _update_label():
	self.text = str(get_node(EnemyMamonPath).get_current_hp()) + \"/\" + \\
				str(get_node(ControllerPath).get_node(\"EnemyMamon\").total_hp)
"

[sub_resource type="DynamicFont" id=8]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 8
font_data = ExtResource( 2 )

[node name="Battle" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerSelf" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 126.0
margin_right = 91.0
margin_bottom = 154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HUD/ContainerSelf"]
margin_right = 57.0
margin_bottom = 8.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 0
text = "Meu mamon"
script = SubResource( 2 )

[node name="Hp" type="Label" parent="HUD/ContainerSelf"]
margin_top = 20.0
margin_right = 75.0
margin_bottom = 28.0
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 0
text = "220/220"
align = 2
script = SubResource( 4 )

[node name="ContainerEnemy" type="MarginContainer" parent="HUD"]
margin_left = 124.0
margin_top = 8.0
margin_right = 199.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HUD/ContainerEnemy"]
margin_right = 74.0
margin_bottom = 8.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 0
text = "Mamon inimigo"
script = SubResource( 6 )

[node name="Hp" type="Label" parent="HUD/ContainerEnemy"]
margin_top = 20.0
margin_right = 75.0
margin_bottom = 28.0
size_flags_vertical = 8
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 0
text = "220/220"
align = 2
script = SubResource( 7 )

[node name="ContainerButtons" type="MarginContainer" parent="HUD"]
margin_left = 195.0
margin_top = 171.0
margin_right = 306.0
margin_bottom = 226.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="HUD/ContainerButtons"]
margin_right = 112.0
margin_bottom = 55.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 2

[node name="BtnAttack" type="Button" parent="HUD/ContainerButtons/GridContainer"]
margin_right = 58.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Atacar"

[node name="BtnHeal" type="Button" parent="HUD/ContainerButtons/GridContainer"]
margin_left = 62.0
margin_right = 112.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Curar"

[node name="BtnItem" type="Button" parent="HUD/ContainerButtons/GridContainer"]
margin_top = 29.0
margin_right = 58.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Item"

[node name="BtnRun" type="Button" parent="HUD/ContainerButtons/GridContainer"]
margin_left = 62.0
margin_top = 29.0
margin_right = 112.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Fugir"

[node name="ContainerInfoText" type="MarginContainer" parent="HUD"]
margin_left = 101.0
margin_top = 169.0
margin_right = 187.0
margin_bottom = 228.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoText" type="Label" parent="HUD/ContainerInfoText"]
margin_right = 86.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 0
text = "escolha seu movimento!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
